--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "markdown.marp.themes": [     
       "./themes/design.css"             
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
